- 06-05-04: Added Skill Failure error checking to PSS. [AlexKreuz]
- 06-05-04: Testing of PSS using SM_PROVOKE. [AlexKreuz]
- 06-05-04: Creation of PSS, Partitioned Skill Structure. [AlexKreuz]
- 06-05-04: Removed all Athena GM command ports. Will implement into ALBGM later. ALBGM completed. [AlexKreuz]
- 06-05-04: Switched GM Command, #USERS to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #PWORD to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #NEWPLAYER to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #GPVPOFF to ALBGM system. [AlexKreuz]
- 06-05-04: Switched GM Command, #GPVPON to ALBGM system. [AlexKreuz]
- 06-04-04: Fixed ALBGM for general users at access level 0. [AlexKreuz]
- 06-04-04: Set default GM_SERVER level to access level 0. [AlexKreuz]
- 06-04-04: Switched GM Command, #PVPOFF to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #PVPON to ALBGM system. [AlexKreuz]
- 06-04-04: Added RELEASE_VERSION constant for simplicity. [AlexKreuz]
- 06-04-04: Switched GM Command, #SERVER to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #UNICON to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #ICON to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #KICK to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #BAN to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #REVIVE to ALBGM system. [AlexKreuz]
- 06-04-04: Switched GM Command, #WHERE to ALBGM system. [AlexKreuz]
- 06-04-04: Fixed #88 - Cancel trade caused unknown item & crash. [AlexKreuz]
- 06-04-04: Fixed MVP monsters affected by stat changes bug. [AlexKreuz]
- 06-04-04: Fixed #916 - Katar of Cold Icicle freezes MVP Monsters. [AlexKreuz]
- 06-03-04: Skills - Finished organzining player vs monster. [Darkhelmet]
- 06-02-04: Skills - FindTargetsInAttackRange added to help with Skills overhaul [ChrstphrR]
- 06-02-04: Skill_Constants - Added new file to project [ChrstphrR]